# discordBot

./: README.md  champ.jsonl  champion.py  commands.py  economy.py  economy_data.csv  games.py  main.py  pyproject.toml  user_data.py
app/: champion.py  chat.py  commands.py  economy.py  games.py  main.py  user_data.py
data/: economy_data.csv
